--- a/views/home.html
+++ b/views/home.html
@@ -5,8 +5,10 @@
 <head>
   <meta charset="utf-8">
   <title>Mercado Liebre</title>
-  <link rel="stylesheet" href="../public/css/styles.css"></link>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> </link>
+  <link rel="stylesheet" href="../public/css/styles.css">
+  </link>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  </link>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width; initial-scale=1.0;">
@@ -16,103 +18,100 @@
 <body>
 
   <header>
-    <img src="../public/img/logo-mercado-liebre.svg" width="400px" height="400px"> </img>
 
+    <img src="../public/img/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
+
+    <form>
+      <input placeholder="Buscar productos, marcas" type="text" />
+      <button><i class="fas fa-search"></i></button>
+    </form>
+
+    <h1><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjetas de crédito</h1>
+
+    <nav>
+      <ul>
+        <li><a href="#">Ofertas</a></li>
+        <li><a href="#">Tiendas Oficiales</a></li>
+        <li><a href="#">Vender</a></li>
+        <li><a href="#">Ayuda</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+        <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+        <li><a href="#">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
+      </ul>
+    </nav>
+
+    <button id="botonHamburguesa"><i class="fas fa-bars"></i></button>
   </header>
 
-  <br>
+  <div class="publicidad"></div>
 
-  <div>
-    <label></label>
-    <input value="Buscar productos, marcas" class="rellenar"><button id="boton1"><i class="fas fa-search fa-lg"></i></button></input>
-  </div>
+  <main>
+    <div>
+      <section>
+        <h2>Basado en tu última visita</h2>
+        <article>
+          <img src="../public/img/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
+          <p><i class="fas fa-truck"></i></p>
+          <p class="precio">$230.000</p>
+          <p class="descuento">20% Off</p>
+          <p class="descripcion">MacBook Pro 2019</p>
+        </article>
+        <article>
+          <img src="../public/img/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+          <p><i class="fas fa-truck"></i></p>
+          <p class="precio">$70.500</p>
+          <p class="descuento">10% Off</p>
+          <p class="descripcion"> Samsung Galaxy S10</p>
+        </article>
+      </section>
+      <section>
+        <h2>Ofertas</h2>
+        <article>
+          <img src="../public/img/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+          <p><i class="fas fa-truck"></i></p>
+          <p class="precio">$10.500</p>
+          <p class="descripcion">Cafetera Moulinex</p>
+        </article>
+        <article>
+          <img src="../public/img/img-tv-samsung-smart.jpg" alt="TV Samsung Smart">
+          <p><i class="fas fa-truck"></i></p>
+          <p class="precio">$80.500</p>
+          <p class="descuento">10% Off</p>
+          <p class="descripcion">TV Samsung Smart</p>
+        </article>
+      </section>
+    </div>
+  </main>
 
-  <p>
-    <i id="cuotas" class="fas fa-hand-holding-usd">Comprá en cuotas y sin tarjetas de crédito</i>
-  </p>
-  <nav class="nav">
-    <ul>
-      <li><a href="www.ofertas.com.ar"> Ofertas</a></li>
-      <li><a href="www.tiendasoficiales.com.ar"> Tiendas Oficiales</a></li>
-      <li><a href="www.vender.com.ar"> Vender</a></li>
-      <li><a href="ayuda"> Ayuda</a></li><br>
-      <li><a href="cuenta">Creá tu cuenta</a><i id="cuenta" class="far fa-id-card"></i></li>
-      <li><a href="ingresa"> Ingresá</a><i id="ingresar" class="fas fa-sign-in-alt"></i></li>
-      <li><a href="compras"> Mis compras</a><i id="comprar" class="fas fa-shopping-basket"></i></li>
-    </ul>
-  </nav>
-  <div>
-    <button class="boton2"><i class="fas fa-bars"></i></button>
-  </div>
 
-  <br>
-  <section>
-    <h2>Basado en tu última visita</h2>
-    <article>
-      <img src="../public/img/img-cafetera-moulinex.jpg" width="200px" height="200px"></img>
-      <h3><strong>Cafetera moulinex</strong></h3>
-      <div>
-        $6.770 <br>
-        40% off
-      </div>
-      <br><br>
-    </article>
-    <article>
-      <img src="../public/img/img-samsung-galaxy-s10.jpg" width="200px" height="200px"></img>
-      <h3><strong>Samsung Galaxy s10</strong></h3>
-      <div>
-        $70.500 <br>
-        10% off
-      </div>
-    </article>
-  </section>
-  <br>
-  <section>
-    <h2>Sección de ofertas</h2>
-    <article>
-      <img src="../public/img/img-macbook-pro-2019.jpg" width="200px" height="200px"></img>
-      <h3><strong>macbook pro 2019</strong></h3>
-      <div>
-        $230.000<br>
-        20% off
-      </div><br>
-    </article>
-    <article>
-      <img src="../public/img/img-samsung-galaxy-s10.jpg" width="200px" height="200px"></img>
-      <h3><strong>Samsung Galaxy s10</strong></h3>
-      <div>
-        $70.500 <br>
-        10% off
-      </div>
-    </article>
-  </section>
-  <br>
+
+
+
+
+
   <footer>
+    <div>
+      <i class="fas fa-credit-card" id="tarjeta"></i>
+      <h2>Paga con tarjeta o en efectivo</h2>
+      <p> Con MercadoLiebre Cash tenés cuotas sin interés con tarjeta o efectivo
+        en puntos de pago.¡Y siempre es seguro!</p>
+    </div>
 
+    <div>
+      <i class="fas fa-gift" id="regalo"></i>
+      <h2>Envío gratis desde los $2.500</h2>
+      <p>Solo por estar registrado en Mercado Liebre tenes envíos gratis en miles de productos.
+        Es un beneficio de mercado puntos.</p>
+    </div>
 
-    <i class="fas fa-credit-card"id="tarjeta"></i>
-    <p><strong>Paga con tarjeta o en efectivo</strong><br><br>
-          Con MercadoLiebre Cash tenés cuotas sin interés con tarjeta o efectivo
-          en puntos de pago.¡Y siempre es seguro!
+    <div> <i class="fas fa-user-shield" id="seguridad"></i>
+      <h2>Seguridad de principio a fin</h2>
+      <p>¿No te gusta?¡Devolvelo!. En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegido.</p>
+    </div>
 
-    </p>
-    <i class="fas fa-gift" id="regalo"></i>
-    <p><strong>Envío gratis desde los $2.500</strong><br><br>
-      Solo por estar registrado en Mercado Liebre tenes envíos gratis en miles de productos.
-      Es un beneficio de mercado puntos.
-
-    </p>
-    <i class="fas fa-user-shield" id="seguridad"></i>
-    <p><strong>Seguridad de principio a fin</strong><br><br>
-      ¿No te gusta?¡Devolvelo!. En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegido.
-      <br>
-      <br>
-      Copyright ©  1999-2020 MercadoLiebre S.R.L 
-
-    </p>
-    
-
-
+    <p>Copyright © 1999-2020 MercadoLiebre S.R.L </p>
   </footer>
 
 </body>
